GNOME Bugzilla – Bug 764296
Two minor fixes
Last modified: 2016-04-14 19:37:23 UTC
See patches
Created attachment 324908 [details] [review] network: fix a GCC warning
Created attachment 324909 [details] [review] display: remove unused code
Created attachment 324911 [details] [review] datetime: add -lm to libraries
Created attachment 324918 [details] [review] editable-entry: use floats to avoid warning Or the code in g_object_set_valist() may treat the zero as a NULL, and trigger a warning.
Review of attachment 324908 [details] [review]: Doesn't apply cleanly anymore.
Review of attachment 324909 [details] [review]: Sure.
Review of attachment 324911 [details] [review]: Sure.
Review of attachment 324918 [details] [review]: Yep.
Attachment 324909 [details] pushed as cc5c94f - display: remove unused code Attachment 324911 [details] pushed as 2fa79c3 - datetime: add -lm to libraries Attachment 324918 [details] pushed as af6b9b6 - editable-entry: use floats to avoid warning
Created attachment 326049 [details] [review] network: fix a GCC warning
Review of attachment 326049 [details] [review]: Yep
Thanks for the reviews! Attachment 326049 [details] pushed as cce521d - network: fix a GCC warning