network: fix a GCC warning

https://bugzilla.gnome.org/show_bug.cgi?id=764296